fixed some intro alignment

--- a/dance.css
+++ b/dance.css
@@ -128,6 +128,14 @@ nav a:hover {
     margin-top: -15px;
 }
 
+.heading .dance-desc {
+    font-size: 20px;
+    color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-top: -15px;
+}
+
 @media screen and (max-width: 768px) {
     /*navbar*/
     .hideOnMobile {
